Fixed spacing issue

--- a/zeppelin-web/src/app/notebook/paragraph/paragraph.css
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph.css
@@ -191,6 +191,7 @@
 
 .paragraph .control button {
   border: 0;
+  padding: 1px 3px;
 }
 
 .paragraph .control li {
